k8s/mysql-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
  labels:
    app: mysql-app
spec:
  containers:
  - name: mysql-container
    image: mysql:8.0
    imagePullPolicy: IfNotPresent
    ports:
      - containerPort: 3306
