k8s/spring-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: spring-pod
  labels:
    app: spring-app
spec:
  containers:
  - name: spring-container
    image: jewelry-backend:1.0
    imagePullPolicy: IfNotPresent
    ports:
      - containerPort: 8080
