k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app: mysql-app
spec:
  selector:
    app: mysql-app
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
