k8s/react-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
  labels:
    app: react-app
spec:
  type: NodePort
  selector:
    app: react-app
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 80  # our FE application is being exposed on port 80 inside the container usign Nginx configuration
    nodePort: 30004
