k8s/jewellery-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jewellery-app
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: react-service
      port:
        number: 3000
  rules:
    - host: vinayaka-jewellers.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 3000

          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: spring-service
                port:
                  number: 8080
